bug 133217.  r=biesi sr=ben.  fixes problem where imagelib will reload images when it shouldn't due to the wrong pointer address being passed in